# sandbox-linux-fs

./: .env.example  .gitignore  README.md  docker-compose.yml
.claude/: settings.local.json
clients/csharp/: LinuxFs.Client.sln
clients/csharp/src/LinuxFs.Client/: ILinuxFsClient.cs  LinuxFs.Client.csproj  LinuxFsClient.cs  LinuxFsClientOptions.cs  ServiceCollectionExtensions.cs
clients/csharp/src/LinuxFs.Client/Exceptions/: LinuxFsApiException.cs  LinuxFsConflictException.cs  LinuxFsException.cs  LinuxFsNotFoundException.cs
clients/csharp/src/LinuxFs.Client/Internal/: ApiKeyDelegatingHandler.cs
clients/csharp/src/LinuxFs.Client/Models/: ApiResponse.cs  ArchiveRequest.cs  CopyFileRequest.cs  CreateRepoRequest.cs  ExecRequest.cs  ExecResponse.cs  FileMeta.cs  (+9 more)
clients/csharp/tests/LinuxFs.Client.Tests/: ErrorHandlingTests.cs  FileClientTests.cs  HealthClientTests.cs  LinuxFs.Client.Tests.csproj  RepoClientTests.cs  SerializationTests.cs  ShellClientTests.cs
server/: .dockerignore  Cargo.toml  Dockerfile
server/src/: auth.rs  config.rs  error.rs  lib.rs  main.rs  state.rs
server/src/background/: eviction_monitor.rs  mod.rs  snapshot_writer.rs  ttl_reaper.rs
server/src/models/: file.rs  mod.rs  repo.rs  snapshot.rs
server/src/persistence/: snapshot.rs  wal.rs
server/src/routes/: archive.rs  files.rs  health.rs  mod.rs  repos.rs  shell.rs
server/src/sandbox/: command_whitelist.rs  executor.rs  mod.rs  path_validator.rs
server/src/services/: eviction_service.rs  file_service.rs  mod.rs  repo_service.rs  shell_service.rs
server/tests/: api_tests.rs
(+1 files in other folders)
